@@ -37,6 +37,9 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 ================================================================================
 # Future
 
+## Fixes
+- `fix/dead-units`: Fixed script trying to use missing isDiplomat function
+
 # 0.44.11-alpha1
 
 ## Structures
